<?xml version="1.0"?>
<package>
  <name>bagrec</name>
  <version>0.0.1</version>
  <description>Fast bag writer.</description>
  <author>Indrek Mandre</author>
  <author>Lindsay Roberts</author>
  <maintainer email="lindsay.roberts@starship.xyz">Lindsay Roberts</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>topic_tools</build_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>topic_tools</run_depend>
</package>
